--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "ws": "^8.12.0"
   }
 }
